need to fix svgs

--- a/src/pug/components/header-input.pug
+++ b/src/pug/components/header-input.pug
@@ -9,19 +9,20 @@ mixin header-input(data)
               | #{input.labelText}
         .header-input__block.header-input__block--btn
           input.header-input__submit(type='submit', value=data.submitText)
-  //.header-input.header-input__mobile
-  //  form
-  //    .row
-  //      each mobInput in data.mobInputs
-  //        .col(class= mobInput.blockClass)
-  //          input(type=mobInput.inputType, id=mobInput.inputId, name=mobInput.inputName, value=mobInput.inputValue)
-  //          label(for=mobInput.labelFor)
-  //            | #{mobInput.labelText}
-  //      .col-md-12
-  //        .header-input__reserve
-  //          each reserveInput in data.reserveInputs
-  //            input(type=reserveInput.inputType, id=reserveInput.inputId, name=reserveInput.inputName, value=reserveInput.inputValue)
-  //            label(for=reserveInput.labelFor)
-  //              | #{reserveInput.labelText}
-  //      .header-input__block.header-input__block--btn.col-md-12
-  //        input.header-input__submit(type='submit', value=data.submitText)
+  .header-input.header-input__mobile
+    form
+      .row
+        each mobInput in data.mobInputs
+          .col(class= mobInput.blockClass)
+            input(type=mobInput.inputType, id=mobInput.inputId, name=mobInput.inputName, value=mobInput.inputValue)
+            label(for=mobInput.labelFor)
+              | #{mobInput.labelText}
+        .col.col-md-12
+          .header-input__reserve
+            each reserveInput in data.reserveInputs
+              .header-input__reserve--input
+                input(type=reserveInput.inputType, id=reserveInput.inputId, name=reserveInput.inputName, value=reserveInput.inputValue)
+                label(for=reserveInput.labelFor)
+                  | #{reserveInput.labelText}
+        .header-input__block.header-input__block--btn.col-md-12
+          input.header-input__submit(type='submit', value=data.submitText)
