--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -73,7 +73,57 @@ include ../sections/header
         }
       ],
       mobInputs: [
-
+        {
+          blockClass: 'col-md-12 header-input__dest',
+          inputType: 'text',
+          inputId: 'mob-dest',
+          inputName: 'mob-dest',
+          inputValue: 'Your destination or hotel name',
+        },
+        {
+          blockClass: 'col-md-6 header-input__checkin',
+          labelFor: 'checkin-date',
+          labelText: 'Check-in date',
+          inputType: 'text',
+          inputId: 'checkin-date',
+          inputName: 'checkin-date',
+          inputValue: 'Tue 15 Sept 2020',
+        },
+        {
+          blockClass: 'col-md-6 header-input__checkout',
+          labelFor: 'checkout-date',
+          labelText: 'Check-out date',
+          inputType: 'text',
+          inputId: 'checkout-date',
+          inputName: 'checkout-date',
+          inputValue: 'Sat 19 Sept 2020',
+        }
+      ],
+      reserveInputs: [
+        {
+          labelFor: 'input-adults',
+          labelText: 'Adults',
+          inputType: 'text',
+          inputId: 'input-adults',
+          inputName: 'input-adults',
+          inputValue: '2',
+        },
+        {
+          labelFor: 'input-children',
+          labelText: 'Children',
+          inputType: 'text',
+          inputId: 'input-children',
+          inputName: 'input-children',
+          inputValue: '0',
+        },
+        {
+          labelFor: 'input-rooms',
+          labelText: 'Rooms',
+          inputType: 'text',
+          inputId: 'input-rooms',
+          inputName: 'input-rooms',
+          inputValue: '1',
+        }
       ]
     },
     appDown: {
