--- a/src/styles/components/header-input.scss
+++ b/src/styles/components/header-input.scss
@@ -1,10 +1,6 @@
 .header-input {
   margin-bottom: 120px;
 
-  &__mobile {
-    display: none;
-  }
-
   &__row {
     display: flex;
     flex-wrap: wrap;
@@ -94,6 +90,115 @@
       font-size: 18px;
       line-height: (21/18);
       color: $brand-white;
+    }
+  }
+
+  // Styles for mobile block
+
+  &__mobile {
+    margin-bottom: 2rem;
+    display: none;
+
+    .header-input__submit {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      font-size: 19px;
+      line-height: (22/19);
+    }
+
+    .col {
+      margin-bottom: 0.5rem;
+    }
+
+    form {
+      padding: 0.5rem;
+      background: $brand-3;
+      border-radius: 0;
+    }
+
+    input {
+      width: 100%;
+      padding: 1.5rem 0.5rem 0.5rem;
+      color: $text-color;
+      font-weight: 500;
+      font-size: 15px;
+      line-height: (18/15);
+      border-radius: 8px;
+    }
+
+    label {
+      position: absolute;
+      font-size: 12px;
+      line-height: (14/12);
+      color: $text-color;
+    }
+  }
+
+  &__dest {
+    position: relative;
+
+    input {
+      padding: 1rem 2rem;
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      background-image: url('../assets/images/input-search.svg');
+    }
+  }
+
+  &__checkin,
+  &__checkout {
+    position: relative;
+
+    label {
+      top: 6px;
+      left: 12px;
+    }
+  }
+
+  &__checkin {
+    padding-right: 4px;
+  }
+
+  &__checkout {
+    padding-left: 4px;
+  }
+
+  &__reserve {
+    display: flex;
+    background-color: $brand-white;
+    border-radius: 8px;
+
+    &--input {
+      position: relative;
+      width: 33.33%;
+
+      label {
+        position: absolute;
+        top: 6px;
+        left: 8px;
+      }
+
+      &:not(:last-child) {
+
+        &:after {
+          position: absolute;
+          content: '';
+          height: 32px;
+          width: 1px;
+          right: 0;
+          top: 50%;
+          transform: translateY(-50%);
+          background-color: $text-color-3;
+        }
+      }
     }
   }
 
