--- a/src/styles/sections/offers.scss
+++ b/src/styles/sections/offers.scss
@@ -59,6 +59,11 @@
       text-align: center;
       font-size: 24px;
       line-height: (28/24);
+
+      @media (max-width: $screen-sm-max) {
+        font-size: 15px;
+        line-height: (18/15);
+      }
     }
 
     @media (max-width: $screen-lg-max) {
